# rules

./: .gitignore  CHANGELOG.md  LICENSE  README.md  Release  pyproject.toml
.github/workflows/: ci.yml
src/rules/: loader.py  models.py
src/rules.egg-info/: PKG-INFO  SOURCES.txt
src/rules/yaml/: field_rules.yaml  question_templates.yaml
src/rules/yaml/erp/: classification_rules.yaml  extraction_rules.yaml  question_templates.yaml
src/rules/yaml/generic/: question_templates.yaml
src/rules/yaml/legal/: classification_rules.yaml  extraction_rules.yaml  question_templates.yaml
src/rules/yaml/medical/: classification_rules.yaml  extraction_rules.yaml  question_templates.yaml
tests/: helpers.py  test_classification_rules.py  test_extraction_rules.py  test_load.py  test_question_templates.py  test_rules_consistency.py
