[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rules"
version = "0.1.2"
requires-python = ">=3.12"
authors = [{ name = "vitaliy.parygin" }, { email = "vitaliy.parygin@gmail.com"}]
dependencies = [
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "ruff>=0.12",
    "types-PyYAML",
    "mypy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

addopts = [
    "-ra",
    "--cov=src/rules",
    "--cov-report=term-missing",
    "--cov-report=xml",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 90
precision = 1

exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rules"]

[tool.hatch.build.targets.wheel.force-include]
"src/rules/py.typed" = "rules/py.typed"
